k8s/policies/kyverno/secrets/require-external-secret-store.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-external-secret-store
spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: validate-cluster-secret-store

      match:
        any:
          - resources:
              kinds:
                - ExternalSecret
              namespaces:
                - hardened

      validate:

        message: "ExternalSecret must use ClusterSecretStore."

        pattern:

          spec:

            secretStoreRef:

              kind: ClusterSecretStore
